[tool.poetry]
name = "micropathforger"
version = "0.2.1"
description = "A microservice for musical progressions generation."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79"
uvicorn = "^0.18.2"
aiohttp = "^3.8.1"
pathforger = {path = "../pathforger/dist/pathforger-0.2.3-py3-none-any.whl"}
chrdiotypes = {path = "../chrdiotypes/dist/chrdiotypes-0.1.2-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
black = "^22.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
hypothesis = "^6.54.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
